# rust-payjoin

./: Cargo.toml  flake.nix
.github/workflows/: csharp.yml  rust.yml
payjoin-cli/: README.md
payjoin-cli/src/: main.rs
payjoin-cli/src/app/: config.rs  wallet.rs
payjoin-cli/src/cli/: mod.rs
payjoin-ffi/: Cargo.toml  rust-toolchain.toml  uniffi-bindgen.rs
payjoin-ffi/csharp/: .gitignore  IntegrationTests.cs  Payjoin.Tests.csproj  Payjoin.csproj  README.md  UnitTests.cs  Utils.cs
payjoin-ffi/csharp/scripts/: generate_bindings.sh  smoke_nuget_package.sh
payjoin-ffi/dart/: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
payjoin-ffi/dart/.cargo/: config.toml
payjoin-ffi/dart/hook/: build.dart
payjoin-ffi/dart/native/: Cargo.toml
payjoin-ffi/dart/test/: test_payjoin_integration_test.dart  test_payjoin_unit_test.dart  utils.dart
payjoin-ffi/javascript/: package-lock.json
payjoin-ffi/javascript/test/: integration.test.ts  unit.test.ts  utils.ts
payjoin-ffi/python/test/: test_payjoin_integration_test.py  test_payjoin_unit_test.py  utils.py
payjoin-ffi/src/: lib.rs  test_utils.rs
payjoin-ffi/src/receive/: error.rs  mod.rs
payjoin-ffi/src/send/: error.rs  mod.rs
payjoin-test-utils/: Cargo.toml
payjoin/src/core/: persist.rs  time.rs
payjoin/src/core/receive/v2/: mod.rs
payjoin/tests/: integration.rs
