[workspace]
members = [
  "ohttp-relay",
  "payjoin",
  "payjoin-cli",
  "payjoin-directory",
  "payjoin-test-utils",
  "payjoin-ffi",
  "payjoin-service",
]
resolver = "2"

[patch.crates-io]
ohttp-relay = { path = "ohttp-relay" }
payjoin = { path = "payjoin" }
payjoin-directory = { path = "payjoin-directory" }
payjoin-service = { path = "payjoin-service" }
payjoin-test-utils = { path = "payjoin-test-utils" }
uniffi-bindgen-cs = { git = "https://github.com/chavic/uniffi-bindgen-cs.git", branch = "chavic/external-types-support" }

[profile.crane]
inherits = "test"
debug = false
