[workspace]

[package]
name = "payjoin-ffi-wrapper"
description = "This is a simple wrapper crate which re-exports payjoin-ffi for publishing to pub.dev"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
_test-utils = ["payjoin-ffi/_test-utils"]

[lib]
name = "payjoin_ffi_wrapper"
crate-type = ["staticlib", "cdylib"]

[dependencies]
payjoin-ffi = { git = "https://github.com/payjoin/rust-payjoin.git", rev = "dc287ea4992e94b0c1194bab8dcc998ec321cbb2", features = [
  "dart",
] }
